made registration and login functional and connected with backend

--- a/src/pages/Auth/stylesheet/style.sass
+++ b/src/pages/Auth/stylesheet/style.sass
@@ -5,7 +5,7 @@
     @apply w-full h-full text-slate-600 p-5 text-center rounded-lg flex flex-col items-center justify-evenly
 
 .auth-form
-    @apply w-full p-10 pt-5 flex flex-col gap-12 items-center
+    @apply w-full p-10 pt-10 flex flex-col gap-12 items-center
 
 .auth-form input
     @apply border-b-2 px-3 
@@ -16,6 +16,11 @@
 .input-group
     @apply w-full flex justify-between 
 
+.remeber-me-box
+    @apply justify-start items-center gap-3
+
 .auth-form button
     @apply self-end bg-orange-600 text-white px-5 py-2 rounded-md font-semibold text-base
 
+.warning
+    @apply fixed translate-y-6 text-sm text-red-600
