--- a/src/index.sass
+++ b/src/index.sass
@@ -15,6 +15,15 @@ h2
 
 h3
     @apply text-4xl font-bold
+
+h4 
+    @apply text-3xl font-semibold
+
+h5
+    @apply text-2xl font-semibold
+
+h6
+    @apply text-xl font-medium
  
 .primary, .secondary, .primary-white, .secondary-white
     transition: $default-transition
