added functional categories

--- a/src/pages/Auth/stylesheet/res.sass
+++ b/src/pages/Auth/stylesheet/res.sass
@@ -13,3 +13,14 @@
 
     .button-group
         @apply flex-col
+    
+    input 
+        @apply bg-opacity-40 bg-white
+
+
+@media screen and (max-height: 800px) 
+    .auth-page
+        @apply justify-center
+
+
+    
