--- a/src/units/style.sass
+++ b/src/units/style.sass
@@ -12,3 +12,12 @@
 
 .link-to.active
     @apply text-amber-300
+
+.category
+    @apply border rounded-full px-4 py-1 w-fit text-sm font-medium
+
+.category.pre-defined
+    @apply bg-orange-600 text-white font-bold
+
+.category.active
+    @apply bg-amber-300
