--- a/src/pages/Accessed/stylesheet/style.sass
+++ b/src/pages/Accessed/stylesheet/style.sass
@@ -1,2 +1,17 @@
 #Accessed
     @apply w-screen h-screen
+
+#Categories
+    @apply w-screen flex gap-3 px-5 py-3 overflow-x-scroll
+
+#Add-Category
+    @apply fixed top-0 left-0 z-30 backdrop-blur-sm w-screen h-screen justify-center items-center p-20 text-slate-600
+
+    .box
+        @apply bg-slate-50 p-10 flex flex-col justify-between gap-10 items-center text-center
+
+        input
+            @apply flex flex-col w-full px-5 py-2 rounded-md
+        
+        .button-group
+            @apply flex w-full justify-between
