--- a/src/pages/Accessed/stylesheet/style.sass
+++ b/src/pages/Accessed/stylesheet/style.sass
@@ -21,3 +21,27 @@
 
     button 
         @apply hover:bg-slate-200 px-3 py-2 text-sm 
+
+#Settings
+    @apply w-screen h-screen text-center flex flex-col justify-center items-center text-slate-600 py-10
+
+    // *
+    //     outline: auto
+
+    #Infos
+        @apply h-full my-10 flex flex-col gap-10
+
+        .info
+            @apply flex justify-between text-xl gap-56
+
+            input, .title
+                @apply px-3 py-1
+
+            input
+                @apply text-right outline-none border-b-2
+
+            button
+                @apply text-sm font-semibold 
+
+.todos
+    @apply w-full flex flex-col justify-start items-center p-8 gap-5
