--- a/src/units/style.sass
+++ b/src/units/style.sass
@@ -21,3 +21,9 @@
 
 .category.active
     @apply bg-amber-300
+
+.task
+    @apply px-5 w-full py-4 bg-amber-300 flex gap-4 transition-all justify-start items-center text-slate-600 font-extrabold max-w-xl outline outline-2 outline-slate-600 rounded-xl
+
+    input
+        @apply w-5 h-5
