--- a/src/pages/Auth/stylesheet/style.sass
+++ b/src/pages/Auth/stylesheet/style.sass
@@ -26,10 +26,10 @@
     @apply fixed translate-y-6 text-sm text-red-600
 
 .user-found
-    @apply fixed w-screen h-screen flex justify-center items-center z-10 backdrop-blur-sm
+    @apply fixed w-screen h-screen flex justify-center items-center z-10 backdrop-blur-sm p-5
 
     .box
-        @apply p-5 flex flex-col gap-10 text-center bg-white text-slate-600 rounded-xl
+        @apply p-5 flex flex-col gap-10 text-center outline-2 outline bg-white text-slate-600 rounded-xl
 
         .header
             @apply text-3xl
