--- a/src/pages/Root/stylesheets/res.sass
+++ b/src/pages/Root/stylesheets/res.sass
@@ -6,6 +6,7 @@
 
     #Root
         text-align: center
+        @apply bg-orange-600 h-screen
 
     .navbar
         justify-content: center !important
@@ -26,3 +27,4 @@
 
     .completed-svg
         transform: scale(0.7) !important
+        display: none
