--- a/src/pages/Auth/stylesheet/res.sass
+++ b/src/pages/Auth/stylesheet/res.sass
@@ -17,6 +17,17 @@
     input 
         @apply bg-opacity-40 bg-white
 
+    .user-found
+        .box
+            .header
+                @apply text-xl
+            
+            h1
+                @apply text-4xl
+            
+            .user-email
+                @apply text-base -my-5
+
 
 @media screen and (max-height: 800px) 
     .auth-page
