--- a/src/units/style.sass
+++ b/src/units/style.sass
@@ -1,8 +1,17 @@
 .category 
-    @apply w-full text-slate-600 font-semibold
+    @apply text-slate-600 font-bold border rounded-full px-4 py-1 text-sm max-h-7
+
+    .name
+        @apply max-h-7 w-max
+
+.category.pre-defined
+    @apply bg-orange-600 text-white font-bold
+
+.category.active
+    @apply bg-amber-300
 
 .link-to
-    @apply flex gap-1 justify-center items-center transition-all
+    @apply flex gap-1 justify-center items-center transition-all z-40 relative
 
     .icon 
         @apply text-amber-300 transition-all hover:scale-125
@@ -13,17 +22,16 @@
 .link-to.active
     @apply text-amber-300
 
-.category
-    @apply border rounded-full px-4 py-1 w-fit text-sm font-medium
-
-.category.pre-defined
-    @apply bg-orange-600 text-white font-bold
-
-.category.active
-    @apply bg-amber-300
-
 .task
     @apply px-5 w-full py-4 bg-amber-300 flex gap-4 transition-all justify-start items-center text-slate-600 font-extrabold max-w-xl outline outline-2 outline-slate-600 rounded-xl
+    transition: all 0.2s ease-in-out, opacity 5s cubic-bezier(0.42, 0, 1, -0.01)
 
     input
         @apply w-5 h-5
+
+    input:checked
+        accent-color: rgb(74, 222, 128)
+        
+.task:has(input:checked)
+    @apply bg-green-400 text-white opacity-0
+
